--- a/roles/debian/389ds/templates/template.ldif.j2
+++ b/roles/debian/389ds/templates/template.ldif.j2
@@ -1,19 +1,21 @@
 version: 1
 
 # entry-id: 1  |  Domain Root Entry
-dn: dc=homelab,dc=internal
+dn: {{ dirsrv_domain }}
 objectClass: top
 objectClass: domain
 dc: homelab
-description: dc=homelab,dc=internal
-aci: (targetattr="dc || description || objectClass")
+description: {{ dirsrv_domain }}
+aci:
+  (targetattr="dc || description || objectClass")
   (targetfilter="(objectClass=domain)")
   (version 3.0;
     acl "Enable anyone domain read";
     allow (read, search, compare)
     (userdn="ldap:///anyone");
   )
-aci: (targetattr="ou || objectClass")
+aci:
+  (targetattr="ou || objectClass")
   (targetfilter="(objectClass=organizationalUnit)")
   (version 3.0;
     acl "Enable anyone ou read";
@@ -23,75 +25,119 @@ aci: (targetattr="ou || objectClass")
 
 # entry-id: 2  |  ???
 # TODO: Figure out what this does
-dn: cn=389_ds_system,dc=homelab,dc=internal
+dn: cn=389_ds_system,{{ dirsrv_domain }}
 objectClass: top
 objectClass: nscontainer
 objectClass: ldapsubentry
 cn: 389_ds_system
 
 # entry-id: 3  |  Groups OU
-dn: ou=groups,dc=homelab,dc=internal
+dn: ou=groups,{{ dirsrv_domain }}
 objectClass: top
 objectClass: organizationalunit
 ou: groups
-aci: (targetattr="cn || member || gidNumber || nsUniqueId || description || ob
- jectClass")(targetfilter="(objectClass=groupOfNames)")(version 3.0; acl "Enab
- le anyone group read"; allow (read, search, compare)(userdn="ldap:///anyone")
- ;)
-aci: (targetattr="member")(targetfilter="(objectClass=groupOfNames)")(version
- 3.0; acl "Enable group_modify to alter members"; allow (write)(groupdn="ldap:
- ///cn=group_modify,ou=permissions,dc=homelab,dc=internal");)
-aci: (targetattr="cn || member || gidNumber || description || objectClass")(ta
- rgetfilter="(objectClass=groupOfNames)")(version 3.0; acl "Enable group_admin
-  to manage groups"; allow (write, add, delete)(groupdn="ldap:///cn=group_admi
- n,ou=permissions,dc=homelab,dc=internal");)
+aci:
+  (targetattr="cn || member || gidNumber || nsUniqueId || description || objectClass")
+  (targetfilter="(objectClass=groupOfNames)")
+  (version 3.0;
+    acl "Enable anyone group read";
+    allow (read, search, compare)
+    (userdn="ldap:///anyone");
+  )
+aci:
+  (targetattr="member")
+  (targetfilter="(objectClass=groupOfNames)")
+  (version 3.0;
+    acl "Enable group_modify to alter members";
+    allow (write)
+    (groupdn="ldap:///cn=group_modify,ou=permissions,{{ dirsrv_domain }}");
+  )
+aci:
+  (targetattr="cn || member || gidNumber || description || objectClass")
+  (targetfilter="(objectClass=groupOfNames)")
+  (version 3.0;
+    acl "Enable group_admin to manage groups";
+    allow (write, add, delete)
+    (groupdn="ldap:///cn=group_admin,ou=permissions,{{ dirsrv_domain }}");
+  )
 
 # entry-id: 4  |  People OU
-dn: ou=people,dc=homelab,dc=internal
+dn: ou=people,{{ dirsrv_domain }}
 objectClass: top
 objectClass: organizationalunit
 ou: people
-aci: (targetattr="objectClass || description || nsUniqueId || uid || displayNa
- me || loginShell || uidNumber || gidNumber || gecos || homeDirectory || cn ||
-  memberOf || mail || nsSshPublicKey || nsAccountLock || userCertificate")(tar
- getfilter="(objectClass=posixaccount)")(version 3.0; acl "Enable anyone user
- read"; allow (read, search, compare)(userdn="ldap:///anyone");)
-aci: (targetattr="displayName || legalName || userPassword || nsSshPublicKey")
- (version 3.0; acl "Enable self partial modify"; allow (write)(userdn="ldap://
- /self");)
-aci: (targetattr="legalName || telephoneNumber || mobile || sn")(targetfilter=
- "(|(objectClass=nsPerson)(objectClass=inetOrgPerson))")(version 3.0; acl "Ena
- ble self legalname read"; allow (read, search, compare)(userdn="ldap:///self"
- );)
-aci: (targetattr="legalName || telephoneNumber")(targetfilter="(objectClass=ns
- Person)")(version 3.0; acl "Enable user legalname read"; allow (read, search,
-  compare)(groupdn="ldap:///cn=user_private_read,ou=permissions,dc=homelab,dc=
- internal");)
-aci: (targetattr="uid || description || displayName || loginShell || uidNumber
-  || gidNumber || gecos || homeDirectory || cn || memberOf || mail || legalNam
- e || telephoneNumber || mobile")(targetfilter="(&(objectClass=nsPerson)(objec
- tClass=nsAccount))")(version 3.0; acl "Enable user admin create"; allow (writ
- e, add, delete, read)(groupdn="ldap:///cn=user_admin,ou=permissions,dc=homela
- b,dc=internal");)
-aci: (targetattr="uid || description || displayName || loginShell || uidNumber
-  || gidNumber || gecos || homeDirectory || cn || memberOf || mail || legalNam
- e || telephoneNumber || mobile")(targetfilter="(&(objectClass=nsPerson)(objec
- tClass=nsAccount))")(version 3.0; acl "Enable user modify to change users"; a
- llow (write, read)(groupdn="ldap:///cn=user_modify,ou=permissions,dc=homelab,
- dc=internal");)
-aci: (targetattr="userPassword || nsAccountLock || userCertificate || nsSshPub
- licKey")(targetfilter="(objectClass=nsAccount)")(version 3.0; acl "Enable use
- r password reset"; allow (write, read)(groupdn="ldap:///cn=user_passwd_reset,
- ou=permissions,dc=homelab,dc=internal");)
+aci:
+  (targetattr="objectClass || description || nsUniqueId || uid || displayName || loginShell || uidNumber || gidNumber || gecos || homeDirectory || cn || memberOf || mail || nsSshPublicKey || nsAccountLock || userCertificate")
+  (targetfilter="(objectClass=posixaccount)")
+  (version 3.0;
+    acl "Enable only user self read";
+    allow (read, search, compare)
+    (userdn="ldap:///self");
+  )
+aci:
+  (targetattr="displayName || legalName || userPassword || nsSshPublicKey")
+  (version 3.0;
+    acl "Enable self partial modify";
+    allow (write)
+    (userdn="ldap:///self");
+  )
+aci:
+  (targetattr="legalName || telephoneNumber || mobile || sn")
+  (targetfilter="(|(objectClass=nsPerson)(objectClass=inetOrgPerson))")
+  (version 3.0;
+    acl "Enable self legalname read";
+    allow (read, search, compare)
+    (userdn="ldap:///self");
+  )
+aci:
+  (targetattr="legalName || telephoneNumber")
+  (targetfilter="(objectClass=nsPerson)")
+  (version 3.0;
+    acl "Enable user legalname read";
+    allow (read, search, compare)
+    (groupdn="ldap:///cn=user_private_read,ou=permissions,{{ dirsrv_domain }}");
+  )
+aci:
+  (targetattr="uid || description || displayName || loginShell || uidNumber || gidNumber || gecos || homeDirectory || cn || memberOf || mail || legalName || telephoneNumber || mobile")
+  (targetfilter="(&(objectClass=nsPerson)(objectClass=nsAccount))")
+  (version 3.0;
+    acl "Enable user admin create";
+    allow (write, add, delete, read)
+    (groupdn="ldap:///cn=user_admin,ou=permissions,{{ dirsrv_domain }}");
+  )
+aci:
+  (targetattr="uid || description || displayName || loginShell || uidNumber || gidNumber || gecos || homeDirectory || cn || memberOf || mail || legalName || telephoneNumber || mobile")
+  (targetfilter="(&(objectClass=nsPerson)(objectClass=nsAccount))")
+  (version 3.0;
+    acl "Enable user modify to change users";
+    allow (write, read)
+    (groupdn="ldap:///cn=user_modify,ou=permissions,{{ dirsrv_domain }}");
+  )
+aci:
+  (targetattr="userPassword || nsAccountLock || userCertificate || nsSshPublicKey")
+  (targetfilter="(objectClass=nsAccount)")
+  (version 3.0;
+    acl "Enable user password reset";
+    allow (write, read)
+    (groupdn="ldap:///cn=user_passwd_reset,ou=permissions,{{ dirsrv_domain }}");
+  )
+aci:
+  (targetattr="objectClass || description || nsUniqueId || uid || displayName || loginShell || uidNumber || gidNumber || gecos || homeDirectory || cn || memberOf || mail || nsSshPublicKey || nsAccountLock || userCertificate")
+  (targetfilter="(objectClass=nsAccount)")
+  (version 3.0;
+    acl "Enable only user read";
+    allow (read, search, compare)
+    (groupdn="ldap:///cn=user_read,ou=permissions,{{ dirsrv_domain }}");
+  )
 
 # entry-id: 5  |  Permissions OU
-dn: ou=permissions,dc=homelab,dc=internal
+dn: ou=permissions,{{ dirsrv_domain }}
 objectClass: top
 objectClass: organizationalunit
 ou: permissions
 
 # entry-id: 6  |  Services OU
-dn: ou=services,dc=homelab,dc=internal
+dn: ou=services,{{ dirsrv_domain }}
 objectClass: top
 objectClass: organizationalunit
 ou: services
@@ -105,42 +151,42 @@ aci: (
   )
 
 # entry-id: 7  |  Permission - Group Admin
-dn: cn=group_admin,ou=permissions,dc=homelab,dc=internal
+dn: cn=group_admin,ou=permissions,{{ dirsrv_domain }}
 objectClass: top
 objectClass: groupOfNames
 objectClass: nsMemberOf
 cn: group_admin
 
 # entry-id: 8  |  Permission - Group Modify
-dn: cn=group_modify,ou=permissions,dc=homelab,dc=internal
+dn: cn=group_modify,ou=permissions,{{ dirsrv_domain }}
 objectClass: top
 objectClass: groupOfNames
 objectClass: nsMemberOf
 cn: group_modify
 
 # entry-id: 9  |  Permission - User Admin
-dn: cn=user_admin,ou=permissions,dc=homelab,dc=internal
+dn: cn=user_admin,ou=permissions,{{ dirsrv_domain }}
 objectClass: top
 objectClass: groupOfNames
 objectClass: nsMemberOf
 cn: user_admin
 
 # entry-id: 10  |  Permission - User Modify
-dn: cn=user_modify,ou=permissions,dc=homelab,dc=internal
+dn: cn=user_modify,ou=permissions,{{ dirsrv_domain }}
 objectClass: top
 objectClass: groupOfNames
 objectClass: nsMemberOf
 cn: user_modify
 
 # entry-id: 11  |  Permission - User Password Reset
-dn: cn=user_passwd_reset,ou=permissions,dc=homelab,dc=internal
+dn: cn=user_passwd_reset,ou=permissions,{{ dirsrv_domain }}
 objectClass: top
 objectClass: groupOfNames
 objectClass: nsMemberOf
 cn: user_passwd_reset
 
 # entry-id: 12  |  Permission - User Private Read
-dn: cn=user_private_read,ou=permissions,dc=homelab,dc=internal
+dn: cn=user_private_read,ou=permissions,{{ dirsrv_domain }}
 objectClass: top
 objectClass: groupOfNames
 objectClass: nsMemberOf
