--- a/roles/kubernetes/k3s-cluster/templates/k3s.service.j2
+++ b/roles/kubernetes/k3s-cluster/templates/k3s.service.j2
@@ -7,11 +7,7 @@ After=network-online.target
 Type=notify
 ExecStartPre=-/sbin/modprobe br_netfilter
 ExecStartPre=-/sbin/modprobe overlay
-ExecStart=/usr/local/bin/k3s \
-    server \
-    --data-dir {{ k3s_server_location }} \
-    --node-taint CriticalAddonsOnly=true:NoExecute \
-    {{ extra_controller_args | default("") }}
+ExecStart=/usr/local/bin/k3s {{ 'server' if 'k3s_masters' in group_names else 'agent' }}
 KillMode=process
 Delegate=yes
 # Having non-zero Limit*s causes performance problems due to accounting overhead
