Fix: Misspelled K3s secrets-encryption parameter

--- a/templates/provisioning/roles/kubernetes/k3s-cluster/templates/config.yaml.j2
+++ b/templates/provisioning/roles/kubernetes/k3s-cluster/templates/config.yaml.j2
@@ -23,7 +23,7 @@ disable:
   - servicelb
   - traefik
 disable-cloud-controller: true
-secret-encryption: true
+secrets-encryption: true
 node-taint: "CriticalAddonsOnly=true:NoExecute"
 {% endif %}
 
