Fix: Remove GitLab Agent token default value
Make variable part of configuration in `/vars`, instead of having
a hardcoded default.

--- a/templates/provisioning/roles/kubernetes/k3s-cluster/templates/gitlab-agent.yaml.j2
+++ b/templates/provisioning/roles/kubernetes/k3s-cluster/templates/gitlab-agent.yaml.j2
@@ -21,9 +21,9 @@ metadata:
   labels:
     app.kubernetes.io/name: gitlab-agent
     app.kubernetes.io/version: v{{ k3s_gitlab_agent_version }}
-data:
-  token: {{ k3s_gitlab_agent_token }}
 type: Opaque
+data:
+  token: {{ k3s_gitlab_agent_token | b64encode }}
 ---
 apiVersion: v1
 kind: ConfigMap
