Improve Ceph CSI deployment

--- a/templates/provisioning/roles/k3s-cluster/templates/ceph-secret.yaml.j2
+++ b/templates/provisioning/roles/k3s-cluster/templates/ceph-secret.yaml.j2
@@ -2,13 +2,15 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: ceph-csi-cephfs
+  name: ceph-csi
 ---
 apiVersion: v1
 kind: Secret
 metadata:
-  name: csi-cephfs-secret
-  namespace: ceph-csi-cephfs
+  name: ceph-secret
+  namespace: ceph-csi
 stringData:
   adminID: {{ k3s.ceph.adminID }}
   adminKey: {{ k3s.ceph.adminKey }}
+  userID: admin
+  userKey: AQCZIv1iyPddAxAAwlhKDUZlzg0pcbost162gA==
