Fix ceph-csi secret

--- a/templates/provisioning/roles/k3s-cluster/templates/ceph-secret.yaml.j2
+++ b/templates/provisioning/roles/k3s-cluster/templates/ceph-secret.yaml.j2
@@ -12,5 +12,5 @@ metadata:
 stringData:
   adminID: {{ k3s.ceph.adminID }}
   adminKey: {{ k3s.ceph.adminKey }}
-  userID: admin
-  userKey: AQCZIv1iyPddAxAAwlhKDUZlzg0pcbost162gA==
+  userID: {{ k3s.ceph.adminID }}
+  userKey: {{ k3s.ceph.adminKey }}
