--- a/metal/roles/openstack/bootstrap_host/templates/globals.yml.j2
+++ b/metal/roles/openstack/bootstrap_host/templates/globals.yml.j2
@@ -1,4 +1,5 @@
 ---
+{% raw %}
 # You can use this file to override _any_ variable throughout Kolla.
 # Additional options can be found in the
 # 'kolla-ansible/ansible/group_vars/all.yml' file. Default value of all the
@@ -58,7 +59,7 @@ workaround_ansible_issue_8743: yes
 # All-In-One without haproxy and keepalived, you can set enable_haproxy to no
 # in "OpenStack options" section, and set this value to the IP of your
 # 'network_interface' as set in the Networking section below.
-kolla_internal_vip_address: "192.168.1.11"
+{% endraw %}kolla_internal_vip_address: "{{ kolla_networks.internal.ip_address }}"{% raw %}
 
 # This is the DNS name that maps to the kolla_internal_vip_address VIP. By
 # default it is the same as kolla_internal_vip_address.
@@ -115,6 +116,7 @@ kolla_internal_vip_address: "192.168.1.11"
 #om_enable_rabbitmq_tls: "{{ rabbitmq_enable_tls | bool }}"
 # CA certificate bundle in containers using oslo.messaging with RabbitMQ TLS.
 #om_rabbitmq_cacert: "{{ rabbitmq_cacert }}"
+{% endraw %}
 
 ##############################
 # Neutron - Networking Options
@@ -128,8 +130,9 @@ kolla_internal_vip_address: "192.168.1.11"
 # Yet another way to workaround the naming problem is to create a bond for the
 # interface on all hosts and give the bond name here. Similar strategy can be
 # followed for other types of interfaces.
-network_interface: "eno1"
+network_interface: "{{ kolla_networks.internal.interface }}"
 
+{% raw %}
 # These can be adjusted for even more customization. The default is the same as
 # the 'network_interface'. These interfaces must contain an IP address.
 #kolla_external_vip_interface: "{{ network_interface }}"
@@ -152,13 +155,15 @@ network_interface: "eno1"
 #octavia_network_address_family: "{{ api_address_family }}"
 #bifrost_network_address_family: "{{ network_address_family }}"
 #dns_address_family: "{{ network_address_family }}"
+{% endraw %}
 
 # This is the raw interface given to neutron as its external network port. Even
 # though an IP address can exist on this interface, it will be unusable in most
 # configurations. It is recommended this interface not be configured with any IP
 # addresses for that reason.
-neutron_external_interface: "eno2"
+neutron_external_interface: "{{ kolla_networks.external.interface }}"
 
+{% raw %}
 # Valid options are [ openvswitch, ovn, linuxbridge, vmware_nsxv, vmware_nsxv3, vmware_nsxp, vmware_dvs ]
 # if vmware_nsxv3 or vmware_nsxp is selected, enable_openvswitch MUST be set to "no" (default is yes)
 # Do note linuxbridge is *EXPERIMENTAL* in Neutron since Zed and it requires extra tweaks to config to be usable.
@@ -916,3 +921,4 @@ octavia_network_type: "tenant"
 # If `etcd_remove_deleted_members` is enabled, Kolla Ansible will automatically
 # remove etcd members from the cluster that are no longer in the inventory.
 #etcd_remove_deleted_members: "no"
+{% endraw %}
