feat(metal): enable Glance image decompression and conversion
MR: https://gitlab.com/ralgar/homelab/-/merge_requests/145

--- a/metal/roles/openstack/bootstrap_host/templates/globals.yml.j2
+++ b/metal/roles/openstack/bootstrap_host/templates/globals.yml.j2
@@ -535,7 +535,7 @@ glance_backend_file: "no"
 #glance_backend_s3: "no"
 #enable_glance_image_cache: "no"
 #glance_enable_property_protection: "no"
-#glance_enable_interoperable_image_import: "no"
+glance_enable_interoperable_image_import: "yes"
 # Configure glance upgrade option.
 # Due to this feature being experimental in glance,
 # the default value is "no".
